# TriageOps

./: .dockerignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
server/: Dockerfile  app.py  environment.py  llm_grader.py  models.py  tickets.py  triage_environment.py
server/tasks/: task1.json  task2.json  task3.json
tests/: test_env.py
