[project]
name = "triageops"
version = "1.0.0"
description = "AI Customer Support Ops — OpenEnv RL Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "openai>=1.6.0",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
